[workspace]
members = [
    "crates/core",
    "crates/jetstream",
    "crates/helloworld",
    "crates/todoapp",
    "crates/oneyearago",
    "crates/fakebluesky", "crates/privatelist",
]
resolver = "2"

[package]
name = "bluesky-feeds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bluesky-feeds"
path = "src/main.rs"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
jetstream-oxide = { version = "0.1" }
atrium-api = { version = "0.25", default-features = false }
tokio-util = "0.7"
futures-util = "0.3"
chrono = "0.4"
cid = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
regex = "1.10"
image = "0.24"
bsky_core = { path = "crates/core" }

[lib]
name = "bluesky_feeds"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bsky_core = { path = "crates/core" }
jetstream = { path = "crates/jetstream" }
helloworld = { path = "crates/helloworld" }
todoapp = { path = "crates/todoapp" }
oneyearago = { path = "crates/oneyearago" }
fakebluesky = { path = "crates/fakebluesky" }
privatelist = { path = "crates/privatelist" }
jetstream-oxide = { workspace = true }
atrium-api = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
image = { workspace = true }
dotenv = "0.15"

[dev-dependencies]
base64 = "0.21"
