[workspace]
members = [
    "crates/shared",
    "crates/helloworld",
]
resolver = "2"

[package]
name = "bluesky-feeds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bluesky-feeds"
path = "src/main.rs"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared = { path = "crates/shared" }
helloworld = { path = "crates/helloworld" }
