[workspace]
members = [
    "crates/models",
    "crates/jetstream",
    "crates/helloworld",
]
resolver = "2"

[package]
name = "bluesky-feeds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bluesky-feeds"
path = "src/main.rs"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
jetstream-oxide = { version = "0.1" }
atrium-api = { version = "0.25", default-features = false }
tokio-util = "0.7"
futures-util = "0.3"
chrono = "0.4"
cid = "0.10"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
models = { path = "crates/models" }
jetstream = { path = "crates/jetstream" }
helloworld = { path = "crates/helloworld" }
jetstream-oxide = { workspace = true }
atrium-api = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
