[package]
name = "fakebluesky"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atrium-api = { version = "0.25", default-features = false }
chrono = "0.4"
image = "0.24"
jetstream-oxide = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dependencies.jetstream]
path = "../jetstream"
