[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
bsky_core = { path = "../core" }
jetstream-oxide = { workspace = true }
atrium-api = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ipld-core = "0.4.1"
sqlx = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
chrono = { workspace = true }
cid = { workspace = true }
serde_json = { workspace = true }
